@@ -106,7 +106,6 @@ asm("movw %0,%%dx \n movw %1,%%ax \n outb %%al,%%dx"::"g"(addr), "g"(data):"ax",
 
 /* I/O thru device driver IOCTL calls */
 
-#ifdef _WIN64
 static int win64_read_io(unsigned int addr)
 {
 	unsigned char data;
@@ -119,7 +118,6 @@ static void win64_write_io(unsigned int addr, int data)
 {
 	rwp_write_byte((unsigned short)addr, (unsigned char)data);
 }
-#endif
 
 /* Functions used for initializing the I/O routines */
 
@@ -132,7 +130,6 @@ int io_open(unsigned long from)
 		io_rd = win32_read_io;
 		io_wr = win32_write_io;
 	}
-#ifndef _WIN64
 	else if(win32_check_os() == WIN_NT)
 	{
 		ret = dha_enable();
@@ -143,7 +140,6 @@ int io_open(unsigned long from)
 
 		instance++;
 	}
-#else
 	else if(win32_check_os() == WIN_64)
 	{
 		ret = rwp_open();
@@ -154,7 +150,6 @@ int io_open(unsigned long from)
 
 		instance++;
 	}
-#endif
 
   return 0;
 }
@@ -164,7 +159,6 @@ int io_close(unsigned long from)
 	int ret;
 
 	if(0) {}
-#ifndef _WIN64
 	else if(win32_check_os() == WIN_NT)
 	{
 		instance--;
@@ -174,7 +168,6 @@ int io_close(unsigned long from)
 			if(ret) return ERR_DHA_NOT_FOUND;
 		}
 	}
-#else
 	else if(win32_check_os() == WIN_64)
 	{
 		instance--;
@@ -184,7 +177,6 @@ int io_close(unsigned long from)
 			if(ret) return ERR_DHA_NOT_FOUND;
 		}
 	}
-#endif
 
 	return 0;
 }
