@@ -4,7 +4,8 @@ Log:
 
 - 02/09/2007, version 1.0.9: roms & kevin
 	- fixed win32_check_libusb()
-	- 
+	- check WIN64 platform at runtime in ioports.c (need to know whether we
+		are running a 32-bit app under Win32 or Win64).
 
 - 24/08/2007, version 1.0.8: roms
 	- removed TiglUsb driver support due to license issues. 
